kubernetes/apps/base/ai-system/open-webui/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: ai-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'open-webui.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
          weight: 100
